test-nc/next-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: next-ingress
  namespace: nexto
spec:
  rules:
  - host: "test2.nnorman.tech"
    http:
      paths:
      - backend:
          serviceName: nextcloud-service
          servicePort: 80
